# Fast-API-

./: .env  main.py  pyproject.toml  requirements.txt
api/: main.py  pyproject.toml  requirements.txt
api/models/: item.py  task.py
api_xavier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
