[project]
name = "api-xavier"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",        
    "uvicorn[standard]==0.30.1", 
    "pydantic==2.7.4",
    "python-dotenv==1.0.1",
    "supabase==2.5.1",
    "requests==2.32.3"         
]

[tool.fastapi]
entrypoint = "main:app"