[project]
name = "api-xavier"             # <--- Cambiado a un nombre válido sin guiones finales
version = "0.1.0"
requires-python = "==3.12.*"    # <--- Bloquea Python 3.12 para que no intente usar 3.14
dependencies = [
    "fastapi[standard]==0.138.2",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "supabase==2.5.1",
    "requests==2.34.2"
]

[tool.fastapi]
entrypoint = "main:app"