[project]
name = "api-xavier"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "python-dotenv",
    "supabase",
    "requests"            # <-- ¡Súper importante! No olvides requests para el login temporal
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "main.py",
    "api"                # <-- Cambiado a "api" para que incluya api/models/ y todo tu módulo
]

[tool.fastapi]
entrypoint = "main:app"